--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter> />
+            </intent-filter>
+            />
         </activity>
         <activity
             android:name=".SearchActivity"
@@ -26,6 +27,7 @@
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".VisualizationActivity"></activity>
     </application>
 
 </manifest>
