--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
             android:label="@string/title_activity_settings"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".VisualizationActivity"></activity>
+        <activity android:name=".SessionReportActivity"></activity>
     </application>
 
 </manifest>
